--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "nwidart/laravel-modules": "^11.0",
         "propaganistas/laravel-phone": "^5.3",
         "spatie/laravel-medialibrary": "^11.9",
